[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/art/interactive/numbers/Numbers 7x10.png" type="Texture" id=1]
[ext_resource path="res://scenes/interact/NumberSafe.gd" type="Script" id=2]
[ext_resource path="res://assets/art/interactive/interactive/safeWithoutFlashlight.png" type="Texture" id=3]
[ext_resource path="res://scenes/interact/FSNumberSafe.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/interact/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/interactive/interactive/safe.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 7, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 14, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 21, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 35, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 49, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 7, 10 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "change_num",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 52.5, 47.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 27, 28 )

[node name="NumberSafe" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FSNumberSafe" parent="CanvasLayer" instance=ExtResource( 4 )]
num_1 = 4
num_2 = 1
num_3 = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="Safe" type="Sprite" parent="Area2D"]
position = Vector2( 215, 195 )
texture = ExtResource( 7 )

[node name="SafeNum1" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 203, 200 )
frames = SubResource( 11 )
animation = "change_num"

[node name="SafeNum2" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 215, 200 )
frames = SubResource( 11 )
animation = "change_num"

[node name="SafeNum3" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 227, 200 )
frames = SubResource( 11 )
animation = "change_num"

[node name="SafeWithoutFlashlight" type="Sprite" parent="Area2D"]
position = Vector2( 215, 195 )
texture = ExtResource( 3 )

[node name="Button" parent="Area2D" instance=ExtResource( 5 )]
visible = false
position = Vector2( 165, 125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 217.5, 192.5 )
shape = SubResource( 13 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 215, 195 )
shape = SubResource( 12 )

[connection signal="popup_hide" from="CanvasLayer/FSNumberSafe" to="." method="_on_FSNumberSafe_popup_hide"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
